# project_yield

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PLAN.md
notebooks/: explore_data_and_ratios.ipynb
src/project_yield/: __init__.py  config.py  core.py
src/project_yield/analysis/: __init__.py  metrics.py  ratios.py
src/project_yield/data/: __init__.py  ingestion.py  reader.py  simfin_client.py  writer.py
src/project_yield/validation/: __init__.py  api_validator.py
src/project_yield/visualization/: __init__.py  charts.py
tests/: __init__.py  conftest.py  test_data.py
