[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-yield"
version = "0.1.0"
description = "High-performance financial data analysis platform for stock market research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["finance", "stocks", "analysis", "trading", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Core dependencies
dependencies = [
    "polars[all]>=1.18.0",
    "pyarrow>=18.1.0",
    "pandas>=2.0.0,<3.0.0",  # Pin to 2.x for simfin compatibility
    "simfin>=0.9.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# Jupyter notebook dependencies
notebook = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.3.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.3.0",
]

# Phase 2 dependencies (LLM integration, IBKR)
phase2 = [
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    "ib-async>=1.0.0",
    "langchain>=0.3.0",
]

# All optional dependencies
all = [
    "project-yield[dev,notebook,phase2]",
]

[project.urls]
Homepage = "https://github.com/yourusername/project-yield"
Documentation = "https://github.com/yourusername/project-yield#readme"
Repository = "https://github.com/yourusername/project-yield"
Issues = "https://github.com/yourusername/project-yield/issues"

[project.scripts]
# CLI commands
project-yield = "project_yield.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/project_yield"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004"]  # Allow fixtures and magic values in tests

[tool.ruff.lint.isort]
known-first-party = ["project_yield"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "simfin.*",
    "plotly.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=project_yield",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
